--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,16 +13,32 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - MONGO_URI=mongodb://mongo-db:27017
+      - POSTGRES_DB=mentorlink_db
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_HOST=postgres-db
+      - POSTGRES_PORT=5432
     depends_on:
-      - mongo-db
-
-  mongo-db:
-    image: mongo:latest
-    ports:
-      - "27017:27017"
+      postgres-db:
+        condition: service_healthy
     volumes:
-      - mongo-data:/data/db
+      - ./server:/app
+
+  postgres-db:
+    image: postgres:latest
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: mentorlink_db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d mentorlink_db -h localhost"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
-  mongo-data:
+  postgres-data:
