--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,10 +1,18 @@
 asgiref==3.8.1
-Django==4.1.13
-djongo==1.3.6
-dnspython==2.6.1
-pymongo==4.7.3
+Django==4.2
+django-cors-headers==4.4.0
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
+inflection==0.5.1
+packaging==24.1
+psycopg2-binary==2.9.9
+PyJWT==2.8.0
 pytz==2024.1
-sqlparse==0.2.4
+PyYAML==6.0.1
+rest-framework-simplejwt==0.0.2
+sqlparse==0.5.0
 style==1.1.0
 typing_extensions==4.12.2
 update==0.0.1
+uritemplate==4.1.1
