--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
         condition: service_healthy
     volumes:
       - ./server:/app
+    command: sh -c "python manage.py runserver 0.0.0.0:8000"
 
   postgres-db:
     image: postgres:latest
@@ -39,6 +40,23 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+
+  initialize:
+    build: ./server
+    volumes:
+      - ./server:/app
+    environment:
+      - POSTGRES_DB=mentorlink_db
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_HOST=postgres-db
+      - POSTGRES_PORT=5432
+    depends_on:
+      postgres-db:
+        condition: service_healthy
+    command: sh -c "python manage.py migrate &&
+                    python manage.py create_mock_data"
+    restart: "no"
 
 volumes:
   postgres-data:
