--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,8 @@ services:
     depends_on:
       postgres-db:
         condition: service_healthy
-    command: sh -c "python manage.py migrate &&
+    command: sh -c "python manage.py makemigrations &&
+                    python manage.py migrate &&
                     python manage.py create_mock_data"
     restart: "no"
 
