Added log in functionally to frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: ./client
     ports:
       - "3000:3000"
+    volumes:
+      - ./client:/app
     depends_on:
       - django-app
 
